# tool-libeep

./: .coverage  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.addendum  README.md  build.py  makefile  meson.build  pyproject.toml  pytest.ini  readme.md  setup.py
.github/workflows/: python-package.yml  wheel.yml
mex/eeglab/: eegplugin_eepimport.m  loadeep_avg.m  pop_loadeep_avg.m
mex/matlab/: eepv4_version.c  read_eep_avr.c  read_eep_avr.m  read_eep_cnt.m  read_eep_rej.m  read_eep_trg.m  read_eep_trial.m  write_eep_avr.m  write_eep_cnt.c  write_eep_cnt.m
pytests/: test_libeep.py
pytests/test_files/: test_cnt_read_in_cwd.py
python/: __init__.py  demo_read_cnt.py  meson.build  pyeep.c
python/libeep/: __init__.py  cnt_file.py  cnt_out.py  cnt_reader.py  cnt_writer.py  demo_read_cnt.py  demo_write_cnt.py  meson.build  oldeep.py  peek.py  pyeep.c
python/libeep/v2/: CMakeLists.txt
python/libeep/v3/: CMakeLists.txt
src/avr/: avr.h  avrcfg.h
src/cnt/: cntutils.h  raw3.h  rej.h  riff.h  riff64.h  trg.h
src/eep/: eepio.h  eepmem.h  eepmisc.h  val.h
src/libavr/: avr.c  avrcfg.c
src/libcnt/: cnt.c  cntutils.c  evt.c  raw3.c  rej.c  seg.c  trg.c
src/libeep/: eepio.c  eepmem.c  eepmisc.c  eepraw.c  val.c
src/v4/: eep.c
test/: demo_v4_read_cnt.c
windows/: Eep.def
