[project]
name = "libeep"
version = "0.1.0"
description = ""
authors = [{ name = "Robert Smies", email = "rsmies@ant-neuro.com" },
           { name = "Steffen Heimes", email = "sheimes@ant-neuro.com" },
           { name = "Velko Hristov", email = "vhristov@ant-neuro.com" }]

readme = "README.md"
# Older versions are out of support starting from 2024-10 or earlier.
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "numpy>=2.0.0",
]

[tool.meson-python.args]
# Use MSVC on windows, some assumptions in the code re: windows are not
# working with GCC.
setup = ['--vsenv']

[tool.cibuildwheel]
skip = [
  # Don't bother (for now) with the win32 build, mesonpy was complaining it can't the right python.
  # 64 bit is fine, though.
  "*-win32",
]

test-extras = ["test"]
# {project} is replaced with the project root directory, aka "." running locally.
test-command = "pytest {project}"
test-skip = [
  "*_i686", # No precompiled numpy there sometimes, and the build is slow. And tends to fail.
]

[tool.pytest.ini_options]
testpaths = "pytests"
addopts = "--cov=libeep -r a -v"

[tool.ruff]
target-version = "py39"
exclude = [
  "oldeep.py", # Keep the old api unchanged for now
]

[tool.ruff.lint]
select = ["N"]
fixable = ["ALL"]

[tool.ruff.format]
line-ending = "lf"

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']
